# Thesis

./: .gitignore  README.md  RxHs.hs
demo/: build  game.cabal  game.hs  install  repl  run  stack.yaml
reactive-formalism/: stack.yaml
reactive-formalism/rx-formal/: rx-formal.cabal
reactive-formalism/rx-formal/src/: RxFormal.hs  cont-based-frp.hs  rx-ContT-StateT.hs  rx-StateT-ContT.hs  rx-cont.hs  rx-formal.hs  rx-semantics-ReaderT-ContT-final.hs
reactive-formalism/rx-formal/src/prototypes/: rx-ReaderT-ContT.hs  rx-semantics-ContT.hs
reactive-formalism/rx-hs/: README.md  rx-hs.cabal  stack.yaml
reactive-formalism/rx-hs/app/: Main.hs
reactive-formalism/rx-hs/src/: Rx.hs
reactive-formalism/rx-hs/src/Rx/: Observable.hs  Observer.hs  Operators.hs  Subscription.hs  Types.hs
reactive-formalism/thesis-report/: README.md  memoirthesis.tex  thesis.tex  thesisbiblio.bib
reactive-formalism/thesis-report/chapters/appendices/: app0A.tex  app1B.tex  app2C.tex
reactive-formalism/thesis-report/chapters/chapter01/: chap01.tex
reactive-formalism/thesis-report/chapters/chapter01/src/: create_run.hs  create_run_demo.hs  iterable_coproducts_maybe.hs  iterable_interface.hs  iterable_interface_final.hs  iterable_types.hs  obs_cont.hs  obs_contT.hs  obs_functions.hs
reactive-formalism/thesis-report/chapters/chapter02/: chap02.tex
reactive-formalism/thesis-report/chapters/chapter03/: chap03.tex
reactive-formalism/thesis-report/chapters/chapter04/: chap04.tex
reactive-formalism/thesis-report/chapters/introduction/: introduction.tex
reactive-formalism/thesis-report/frontmatter/: abstract.tex  title.tex
reactive-formalism/thesis-report/src/: continuation_monad.hs  create_run_demo.hs  iter_to_obs.hs  iterable_coproducts_maybe.hs  iterable_functor.hs  iterable_interface.hs  obs_cont.hs  obs_contT.hs  obs_events.hs  observable_events.hs  observable_functor.hs  observable_functor_lift.hs  observable_newtype.hs  observable_readerT.hs  polarity.hs  scheduler.hs  scheduler_subscription.hs  subsciption.hs
report/: thesis.mintedcmd
report/chapters/appendices/: app0A.tex  app1B.tex  app2C.tex
report/chapters/chapter01/: chap01.tex
report/chapters/chapter02/: chap02.tex
report/chapters/chapter03/: chap03.tex
report/chapters/introduction/: introduction.tex
report/frontmatter/: abstract.tex  dedication.tex
report/src/: iter_to_obs.hs  iterable_functor.hs  iterable_interface.hs  iterable_interface_final.hs  iterable_types.hs  obs_events.hs  observable_compl_err.hs  observable_contT.hs  observable_functor.hs  polarity.hs  subsciption.hs
