name:                game
version:             0.1.0.0
synopsis:            game template
description:         Please see README.md
homepage:            https://github.com/githubuser/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable game
  hs-source-dirs:      .
  main-is:             game.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, text, HGamer3D (>= 0.8.0 && < 2.0.0), rx-hs (>= 0.1.0.0)
  default-language:    Haskell2010
